# rsfake-cli

./: Cargo.toml  LICENSE  README.md
examples/: schema-args.json  schema-decimal.json  schema-duration.json  schema-float.json  schema-full.json  schema-ints.json  schema-numeric.json  schema-range.json
src/: extract.rs  generate.rs  main.rs
